--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-# Deploy ARF as static content to GitHub Pages
+# Deploy as static content to GitHub Pages
 name: Deploy documentation to Pages
 
 on:
