install local and override

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
     "jsdom": "^21.1.0",
-    "@mermaid-js/mermaid-cli":"~10"
+    "mermaid-filter": "~1.4"
+  },
+  "overrides": {
+    "@mermaid-js/mermaid-cli": ">=10"
   }
 }
